Added database views to populate dashboard select controls

--- a/Dashboad/templates/FlightDelayPredictor.html
+++ b/Dashboad/templates/FlightDelayPredictor.html
@@ -36,10 +36,16 @@
                             <select class="custom-select text-white bg-dark" id="origin_states">
                             </select>
                         </div>
-                        <div>
+                        <div>                        <div>
                             <label for="origin_state_airports">Origin Airport</label>
                             <br/>
                             <select class="custom-select text-white bg-dark" id="origin_state_airports">
+                            </select>
+                        </div>
+                       <div>
+                            <label for="dest_states">Destination State</label>
+                            <br/>
+                            <select class="custom-select text-white bg-dark" id="dest_states">
                             </select>
                         </div>
                      </form>
