updated dashboard with database objects and updated js code

--- a/Dashboad/templates/FlightDelayPredictor.html
+++ b/Dashboad/templates/FlightDelayPredictor.html
@@ -37,9 +37,9 @@
                             </select>
                         </div>
                         <div>                        <div>
-                            <label for="origin_state_airports">Origin Airport</label>
+                            <label for="origin_airports">Origin Airport</label>
                             <br/>
-                            <select class="custom-select text-white bg-dark" id="origin_state_airports">
+                            <select class="custom-select text-white bg-dark" id="origin_airports">
                             </select>
                         </div>
                        <div>
