Added working fight prediction delay dashboard component

--- a/Dashboad/static/css/FlightDelayPredictor.css
+++ b/Dashboad/static/css/FlightDelayPredictor.css
@@ -22,3 +22,13 @@ form div {
 .select-dates{
     width: 80px;
 }
+
+.flight-predict-delay {
+    background-color: red;
+    color: yellow;
+}
+
+.flight-predict-ontime {
+    background-color: green;
+    color: white;
+}
