--- a/Dashboad/templates/FlightDelayPredictor.html
+++ b/Dashboad/templates/FlightDelayPredictor.html
@@ -61,22 +61,22 @@
                         <table>
                             <tbody>
                                 <tr>
-                                    <td id="flight_delay_col_500_AM">5:00 AM</td><td id="flight_delay_col_530_AM">5:30 AM</td>
-                                    <td id="flight_delay_col_600_AM">6:00 AM</td><td id="flight_delay_col_630_AM">6:30 AM</td>
-                                    <td id="flight_delay_col_700_AM">7:00 AM</td><td id="flight_delay_col_730_AM">7:30 AM</td>
-                                    <td id="flight_delay_col_800_AM">8:00 AM</td><td id="flight_delay_col_830_AM">8:30 AM</td>
-                                    <td id="flight_delay_col_900_AM">9:00 AM</td><td id="flight_delay_col_930_AM">9:30 AM</td>
-                                    <td id="flight_delay_col_1000_AM">10:00 AM</td><td id="flight_delay_col_1030_AM">10:30 AM</td>
-                                    <td id="flight_delay_col_1100_AM">11:00 AM</td><td id="flight_delay_col_1130_AM">11:30 AM</td>
-                                    <td id="flight_delay_col_1200_PM">12:00 PM</td><td id="flight_delay_col_1230_PM">12:30 PM</td>
-                                    <td id="flight_delay_col_100_PM">1:00 PM</td><td id="flight_delay_col_130_PM">1:30 PM</td>
-                                    <td id="flight_delay_col_200_PM">2:00 PM</td><td id="flight_delay_col_230_PM">2:30 PM</td>
-                                    <td id="flight_delay_col_300_PM">3:00 PM</td><td id="flight_delay_col_330_PM">3:30 PM</td>
-                                    <td id="flight_delay_col_400_PM">4:00 PM</td><td id="flight_delay_col_430_PM">4:30 PM</td>
-                                    <td id="flight_delay_col_500_PM">5:00 PM</td><td id="flight_delay_col_530_PM">5:30 PM</td>
-                                    <td id="flight_delay_col_600_PM">6:00 PM</td><td id="flight_delay_col_630_PM">6:30 PM</td>
-                                    <td id="flight_delay_col_700_PM">7:00 PM</td><td id="flight_delay_col_730_PM">7:30 PM</td>
-                                    <td id="flight_delay_col_800_PM">8:00 PM</td><td id="flight_delay_col_830_PM">8:30 PM</td>
+                                    <td id="flight_delay_col_0">5:00 AM</td><td id="flight_delay_col_1">5:30 AM</td>
+                                    <td id="flight_delay_col_2">6:00 AM</td><td id="flight_delay_col_3">6:30 AM</td>
+                                    <td id="flight_delay_col_4">7:00 AM</td><td id="flight_delay_col_5">7:30 AM</td>
+                                    <td id="flight_delay_col_6">8:00 AM</td><td id="flight_delay_col_7">8:30 AM</td>
+                                    <td id="flight_delay_col_8">9:00 AM</td><td id="flight_delay_col_9">9:30 AM</td>
+                                    <td id="flight_delay_col_10">10:00 AM</td><td id="flight_delay_col_11">10:30 AM</td>
+                                    <td id="flight_delay_col_12">11:00 AM</td><td id="flight_delay_col_13">11:30 AM</td>
+                                    <td id="flight_delay_col_14">12:00 PM</td><td id="flight_delay_col_15">12:30 PM</td>
+                                    <td id="flight_delay_col_16">1:00 PM</td><td id="flight_delay_col_17">1:30 PM</td>
+                                    <td id="flight_delay_col_18">2:00 PM</td><td id="flight_delay_col_19">2:30 PM</td>
+                                    <td id="flight_delay_col_20">3:00 PM</td><td id="flight_delay_col_21">3:30 PM</td>
+                                    <td id="flight_delay_col_22">4:00 PM</td><td id="flight_delay_col_23">4:30 PM</td>
+                                    <td id="flight_delay_col_24">5:00 PM</td><td id="flight_delay_col_25">5:30 PM</td>
+                                    <td id="flight_delay_col_26">6:00 PM</td><td id="flight_delay_col_27">6:30 PM</td>
+                                    <td id="flight_delay_col_28">7:00 PM</td><td id="flight_delay_col_29">7:30 PM</td>
+                                    <td id="flight_delay_col_30">8:00 PM</td><td id="flight_delay_col_31">8:30 PM</td>
                                 </tr>
                             </tbody>
                         </table>
