--- a/Dashboad/static/css/FlightDelayPredictor.css
+++ b/Dashboad/static/css/FlightDelayPredictor.css
@@ -2,25 +2,60 @@ body {
     color: #f7f7f7;
 }
 
+
 form div {
-    display:inline-block;
+    display:block;
     align-content: center;
-    padding-left: 10px;
-    padding-right:10px;
+    padding: 10px;
     font-size: medium;
-    text-align: center;
+    width:1000px;
 }
 
-.select-state {
+.label-states {
+    width: 355px;
+    text-align: right;
+}
+
+.select-states {
     width: 125px;
 }
 
-.select-airport{
+.label-airports {
+    width: 150px;
+    text-align: right;
+}
+
+.select-airports {
     width: 325px;
 }
 
-.select-dates{
-    width: 80px;
+#dest_airlines {
+    width: 230px;
+}
+
+#dest_dates {
+    width: 150px;
+    text-align: right;
+}
+
+#label_dest_dates {
+    width: 100px;
+    text-align: right;
+}
+
+#flight_data_display td {
+    padding:5px;
+}
+
+#flight_data_display td div {
+    padding:5px;
+    border-top: 2px solid white;
+    border-left: 2px solid white;
+    border-bottom: 2px solid black;
+    border-right: 2px solid black;
+    text-align:right;
+    font-size: smaller;
+    width:70px;
 }
 
 .flight-predict-delay {
@@ -32,3 +67,4 @@ form div {
     background-color: green;
     color: white;
 }
+
