--- a/Dashboad/templates/FlightDelayPredictor.html
+++ b/Dashboad/templates/FlightDelayPredictor.html
@@ -23,60 +23,53 @@
             <hr class="my-2">
             <p>Disclaimer Garbage In Garbage Out</p>
         </div>
-        <div class="container-fluid">
+        <div class="container-fluid";>
              <div class="row">
-                <div class="col-md-6">
-                    <img src="static/images/airline_system_map.png" height="400" width="800">
-                </div>
-                <div class="col-md-6">
+                <div class="col-md-12">
                     <form>
-                        <div>
-                            <label for="origin_states">Origin State</label>
-                            <select class="custom-select text-white bg-dark select-state" id="origin_states"></select>
+                        <div class="bg-dark">
+                            <label class="label-states" for="origin_states">Origin State</label>
+                            <select class="custom-select text-white bg-dark select-states" id="origin_states"></select>
+                             <label class="label-airports" for="origin_airports">Origin Airport</label>
+                            <select class="custom-select text-white bg-dark select-airports" id="origin_airports"></select>
                         </div>
-                        <div>
-                            <label for="origin_airports">Origin Airport</label>
-                            <select class="custom-select text-white bg-dark select-airport" id="origin_airports"></select>
+                        <div class="bg-dark">
+                            <label class="label-states" for="dest_states">Destination State</label>
+                            <select class="custom-select text-white bg-dark select-states" id="dest_states"></select>
+                            <label class="label-airports" for="dest_aiports">Destination Airport</label>
+                            <select class="custom-select text-white bg-dark select-airports" id="dest_airports"></select>
                         </div>
-                        <div>
-                            <label for="dest_states">Destination State</label>
-                            <select class="custom-select text-white bg-dark select-state" id="dest_states"></select>
-                        </div>
-                        <div>
-                            <label for="dest_aiports">Destination Airport</label>
-                            <select class="custom-select text-white bg-dark select-airport" id="dest_airports"></select>
-                        </div>
-                        <div>
-                            <label for="dest_airlines">Airline</label>
+                        <div class="bg-dark">
+                            <label for="dest_airlines" class="label-states">Airline</label>
                             <select class="custom-select text-white bg-dark" id="dest_airlines"></select>
-                        </div>
-                        <div>
-                            <label for="dest_dates">Travel Date</label>
-                            <select class="custom-select text-white bg-dark select-dates" id="dest_dates"></select>
+                            <label for="dest_dates" id="label_dest_dates">Travel Date</label>
+                            <select class="custom-select text-white bg-dark" id="dest_dates"></select>
                         </div>
                     </form>
                 </div>
                 <div class="row">
                     <div class="col-md-12">
-                        <table>
+                        <table class="bg-dark" id="flight_data_display">
                             <tbody>
                                 <tr>
-                                    <td id="flight_delay_col_0">5:00 AM</td><td id="flight_delay_col_1">5:30 AM</td>
-                                    <td id="flight_delay_col_2">6:00 AM</td><td id="flight_delay_col_3">6:30 AM</td>
-                                    <td id="flight_delay_col_4">7:00 AM</td><td id="flight_delay_col_5">7:30 AM</td>
-                                    <td id="flight_delay_col_6">8:00 AM</td><td id="flight_delay_col_7">8:30 AM</td>
-                                    <td id="flight_delay_col_8">9:00 AM</td><td id="flight_delay_col_9">9:30 AM</td>
-                                    <td id="flight_delay_col_10">10:00 AM</td><td id="flight_delay_col_11">10:30 AM</td>
-                                    <td id="flight_delay_col_12">11:00 AM</td><td id="flight_delay_col_13">11:30 AM</td>
-                                    <td id="flight_delay_col_14">12:00 PM</td><td id="flight_delay_col_15">12:30 PM</td>
-                                    <td id="flight_delay_col_16">1:00 PM</td><td id="flight_delay_col_17">1:30 PM</td>
-                                    <td id="flight_delay_col_18">2:00 PM</td><td id="flight_delay_col_19">2:30 PM</td>
-                                    <td id="flight_delay_col_20">3:00 PM</td><td id="flight_delay_col_21">3:30 PM</td>
-                                    <td id="flight_delay_col_22">4:00 PM</td><td id="flight_delay_col_23">4:30 PM</td>
-                                    <td id="flight_delay_col_24">5:00 PM</td><td id="flight_delay_col_25">5:30 PM</td>
-                                    <td id="flight_delay_col_26">6:00 PM</td><td id="flight_delay_col_27">6:30 PM</td>
-                                    <td id="flight_delay_col_28">7:00 PM</td><td id="flight_delay_col_29">7:30 PM</td>
-                                    <td id="flight_delay_col_30">8:00 PM</td><td id="flight_delay_col_31">8:30 PM</td>
+                                    <td><div id="flight_delay_col_0">5:00 AM</div></td> <td><div id="flight_delay_col_1">5:30 AM</div></td> 
+                                    <td><div id="flight_delay_col_2">6:00 AM</div></td> <td><div id="flight_delay_col_3">6:30 AM</div></td> 
+                                    <td><div id="flight_delay_col_4">7:00 AM</div></td> <td><div id="flight_delay_col_5">7:30 AM</div></td> 
+                                    <td><div id="flight_delay_col_6">8:00 AM</div></td> <td><div id="flight_delay_col_7">8:30 AM</div></td> 
+                                    <td><div id="flight_delay_col_8">9:00 AM</div></td> <td><div id="flight_delay_col_9">9:30 AM</div></td> 
+                                    <td><div id="flight_delay_col_10">10:00 AM</div></td> <td><div id="flight_delay_col_11">10:30 AM</div></td> 
+                                    <td><div id="flight_delay_col_12">11:00 AM</div></td> <td><div id="flight_delay_col_13">11:30 AM</div></td> 
+                                    <td><div id="flight_delay_col_14">12:00 PM</div></td> <td><div id="flight_delay_col_15">12:30 PM</div></td> 
+                                </tr>
+                                <tr>
+                                    <td><div id="flight_delay_col_16">1:00 PM</div></td> <td><div id="flight_delay_col_17">1:30 PM</div></td> 
+                                    <td><div id="flight_delay_col_18">2:00 PM</div></td> <td><div id="flight_delay_col_19">2:30 PM</div></td> 
+                                    <td><div id="flight_delay_col_20">3:00 PM</div></td> <td><div id="flight_delay_col_21">3:30 PM</div></td> 
+                                    <td><div id="flight_delay_col_22">4:00 PM</div></td> <td><div id="flight_delay_col_23">4:30 PM</div></td> 
+                                    <td><div id="flight_delay_col_24">5:00 PM</div></td> <td><div id="flight_delay_col_25">5:30 PM</div></td> 
+                                    <td><div id="flight_delay_col_26">6:00 PM</div></td> <td><div id="flight_delay_col_27">6:30 PM</div></td> 
+                                    <td><div id="flight_delay_col_28">7:00 PM</div></td> <td><div id="flight_delay_col_29">7:30 PM</div></td> 
+                                    <td><div id="flight_delay_col_30">8:00 PM</div></td> <td><div id="flight_delay_col_31">8:30 PM</div></td> 
                                 </tr>
                             </tbody>
                         </table>
