Added spacing on the left side of the dashboard

--- a/Dashboad/templates/FlightDelayPredictor.html
+++ b/Dashboad/templates/FlightDelayPredictor.html
@@ -25,7 +25,9 @@
         </div>
         <div class="container-fluid";>
              <div class="row">
-                <div class="col-md-12">
+                <div class="col-md-1">
+                </div>
+                <div class="col-md-11">
                     <form>
                         <div class="bg-dark">
                             <label class="label-states" for="origin_states">Origin State</label>
@@ -48,7 +50,9 @@
                     </form>
                 </div>
                 <div class="row">
-                    <div class="col-md-12">
+                    <div class="col-md-1">
+                    </div>
+                    <div class="col-md-11">
                         <table class="bg-dark" id="flight_data_display">
                             <tbody>
                                 <tr>
