updated dashboard html

--- a/Dashboard/templates/FlightDelayPredictor.html
+++ b/Dashboard/templates/FlightDelayPredictor.html
@@ -34,8 +34,8 @@
                 <div class="display-header">
                     Choose Travel Origin, Destination, Airline, and Travel Date
                 </div>
-                <div class="display-header">
-                    Disclaimer ...
+                <div class="display-header" style="font-size:x-small">
+                    Disclaimer ... Delay prediction has a precision of 0.42 and a recall of 0.35
                 </div>
                 <form>
                     <div class="bg-dark">
